force-app/main/default/objects/Sales_Debrief_Config_Answer__c/Sales_Debrief_Config_Answer__c.object-meta.xml
<CustomObject>
    <label>Sales Debrief Config Answer</label>
    <nameField>
        <displayFormat>SDCA-{0000}</displayFormat>
        <label>Sales Debrief Config Answer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Debrief Config Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>