force-app/main/default/objects/Sales_Debrief_Config_Answer__c/fields/Sales_Debrief_Config_Question__c.field-meta.xml
<CustomField>
    <fullName>Sales_Debrief_Config_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Debrief Config Question</label>
    <referenceTo>Sales_Debrief_Config_Question__c</referenceTo>
    <relationshipLabel>Sales Debrief Config Answers</relationshipLabel>
    <relationshipName>Sales_Debrief_Config_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>