force-app/main/default/objects/Sales_Debrief_Config_Answer__c/fields/Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Value_Type__c</fullName>
    <label>Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>MultiPicklist</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Textbox</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>