force-app/main/default/objects/Sales_Debrief_Config_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Debrief_Config_Question__c</columns>
    <columns>Index__c</columns>
    <columns>Value__c</columns>
    <columns>Value_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>